--- a/portfolio_zaki/src/Pages/Styles/About.css
+++ b/portfolio_zaki/src/Pages/Styles/About.css
@@ -30,7 +30,7 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
 
-  background-color: #efe1ce;
+  /* background-color: #efe1ce; */
 }
 .indiviskill:hover {
   background-color: #e0b589;
