--- a/portfolio_zaki/src/Pages/Styles/Git.css
+++ b/portfolio_zaki/src/Pages/Styles/Git.css
@@ -5,42 +5,52 @@
   margin: auto;
   font-family: "Rubik Distressed";
   color: brown;
-  background-color: #edf2f8;
+
 }
 .calendar {
   width: 60%;
-
   height: auto;
   margin: auto;
-  margin-top: 30px;
+
   align-items: center;
   text-align: center;
 }
 .calendar img{
-  width: 100%;
-  height: auto;
-}
+  width: 70%;
 
+  height: 200px;
+}
+#langimg{
+  width: 100%;
+  height: 400px;
+}
 @media screen and (max-width: 940px) {
   .calendar {
     width: 70%;
-  
+ 
     height: auto;
     margin: auto;
     margin-top: 30px;
     align-items: center;
     text-align: center;
   }
-
+  .calendar img{
+    width: 70%;
+ 
+    height: 150px;
+  }
+  #langimg{
+    width: 100%;
+    height: 350px;
+  }
 }
-
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 700px) {
   .calendar {
     width: 90%;
   
     height: auto;
     margin: auto;
-    margin-top: 30px;
+  
     align-items: center;
     text-align: center;
   }
@@ -54,4 +64,61 @@
     background-color: #edf2f8;
     font-size: smaller;
   }
+
+  
+  .calendar img{
+    width: 70%;
+ 
+    height: 150px;
+  }
+  #langimg{
+    width: 100%;
+    height: 220px;
+  }
+
+
+}
+@media screen and (max-width: 440px) {
+  .calendar {
+    width: 90%;
+  
+    height: auto;
+    margin: auto;
+  
+    align-items: center;
+    text-align: center;
+  }
+  .gitdiv{
+    width: 100%;
+    text-align: center;
+    height: auto;
+    margin: auto;
+    font-family: "Rubik Distressed";
+    color: brown;
+    background-color: #edf2f8;
+    font-size: smaller;
+  }
+
+  
+  .calendar img{
+    width: 70%;
+
+    height: 100px;
+  }
+  #langimg{
+    width: 100%;
+    height: 200px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
 }
