--- a/portfolio_zaki/src/Pages/Styles/About.css
+++ b/portfolio_zaki/src/Pages/Styles/About.css
@@ -4,8 +4,8 @@
 }
 .h1tag {
   text-align: center;
+  color: #00758f;
   font-family: "Rubik Distressed";
-  color: brown;
 }
 .about {
   width: 70%;
