--- a/portfolio_zaki/src/Pages/Styles/Contact.css
+++ b/portfolio_zaki/src/Pages/Styles/Contact.css
@@ -18,8 +18,8 @@
 #connect {
   text-align: center;
   margin-top: 10px;
+  color: #00758f;
   font-family: "Rubik Distressed";
-  color: brown;
 }
 .contact-form {
   width: 90%;
