--- a/portfolio_zaki/src/Pages/Styles/Git.css
+++ b/portfolio_zaki/src/Pages/Styles/Git.css
@@ -3,8 +3,8 @@
   text-align: center;
   height: auto;
   margin: auto;
+  color: #00758f;
   font-family: "Rubik Distressed";
-  color: brown;
 
 }
 .calendar {
