--- a/portfolio_zaki/src/Pages/Styles/Home.css
+++ b/portfolio_zaki/src/Pages/Styles/Home.css
@@ -3,7 +3,7 @@
 
   width: 100%;
   height: auto;
-  margin-top: 100px;
+  margin-top: 80px;
 }
 
 .profile-div {
@@ -27,8 +27,11 @@
   border-radius: 275px;
 }
 #hello {
-  font-family: "Mochiy Pop One";
+  font-family: 'Courier New', Courier, monospace;
   font-size: large;
+}
+.typewriter{
+  font-family: 'Courier New', Courier, monospace;
 }
 .hello_world{
   background-color: blueviolet;
@@ -38,12 +41,12 @@
   margin-top: 20px;
   font-size: 40px;
 
-  font-family: "Rubik Distressed";
-  color: rgb(180, 7, 7);
+  font-family: 'Courier New', Courier, monospace;
+  color: #965679;
 }
 
 #iam {
-  font-family: "Mochiy Pop One";
+  font-family: 'Courier New', Courier, monospace;
 }
 .words {
   width: 52%;
