--- a/portfolio_zaki/src/Components/Navbar.css
+++ b/portfolio_zaki/src/Components/Navbar.css
@@ -24,7 +24,6 @@ margin-top: 2px;
 }
 
 
-/* icon code end */
 
 .header {
   position: fixed;
@@ -35,8 +34,7 @@ margin-top: 2px;
   z-index: 1;
   transition: 0.3s ease-in;
   overflow: hidden;
-    /* background-color:#9f5557;   */
-  background-color: #1c3334;  
+    background-color: #1c3334; 
 }
 
 .header .navbar {
@@ -86,7 +84,7 @@ ul {
 @media screen and (max-width: 940px) {
   .header {
     max-width: 100%;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: #1c3334; 
   }
   .header .navbar {
     max-width: 100%;
@@ -103,7 +101,7 @@ ul {
     left: -100%;
     top: 70px;
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: #1c3334; 
     width: 100%;
     height: 100vh;
     z-index: 999;
@@ -114,9 +112,9 @@ ul {
   .nav-menu.active {
     left: 0;
   }
-
+/* for resume opton on navbar */
   .nav-item {
-    margin: 1.5rem 0;
+    margin: 1.1rem 0;
   }
 
   .header .navbar img {
