--- a/portfolio_zaki/src/Pages/Styles/Project.css
+++ b/portfolio_zaki/src/Pages/Styles/Project.css
@@ -4,6 +4,13 @@
 
   background-color: #a09998;
 }
+
+.titleofproject{
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 18px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 #projecth1 {
   color: #965679;
   font-family: 'Courier New', Courier, monospace;
@@ -27,9 +34,7 @@
   height: auto;
   background-color: aliceblue;
   border-radius: 20px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
-    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
-    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 /* .indivi:hover {
 background-color: darkolivegreen;
